--- a/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "27d8de6a-6ffc-4a65-a1b0-1890f3387beb",
      "showTitle": false,
@@ -29,7 +32,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0d3bbc6e-e99c-4689-8b12-86040c06dba0",
      "showTitle": false,
@@ -55,7 +61,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e47df0c8-4b57-45d2-bd2f-3a524198eab8",
      "showTitle": false,
@@ -91,7 +100,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9ae724e7-9abf-4a35-80a5-08e9c8e9b55c",
      "showTitle": false,
@@ -130,7 +142,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "497f6109-4d20-48b3-b7be-dd8f207a5109",
      "showTitle": false,
@@ -187,7 +202,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "92c8aaa9-b9c7-43fe-a718-21cd1f96d858",
      "showTitle": false,
@@ -218,7 +236,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f2ee3ace-8a8b-4fa9-bad8-04b0f4e2418d",
      "showTitle": false,
