--- a/DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "577fb86f-84ed-49a2-b1a1-aa785feceefc",
      "showTitle": false,
@@ -30,7 +33,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "25cba1ec-bc2f-4a95-8b19-097852590dfa",
      "showTitle": false,
@@ -54,7 +60,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1aefc3a3-9caf-4ec6-a347-da3087d56868",
      "showTitle": false,
@@ -234,7 +243,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9a3390ab-18af-48bd-a851-c545b46dff6f",
      "showTitle": false,
@@ -273,7 +285,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "fb179fb0-e5d9-4e48-9982-2a9c96ded80c",
      "showTitle": false,
@@ -334,7 +349,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "abfc7abf-3ec7-454a-92f9-24890b34f7e1",
      "showTitle": false,
@@ -366,7 +384,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d3d610af-9496-4c55-ad10-005930465309",
      "showTitle": false,
@@ -390,7 +411,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9db9ee0f-d63e-4cc5-bd1b-5ca221129d09",
      "showTitle": false,
@@ -424,8 +448,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5b05ea52-d454-4ea2-8115-9ab12691e3da",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.1 - Bronze Layer (część 2: dodanie audit metadata)\n",
@@ -451,8 +487,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "31448629-457f-48e0-81aa-8aa72ff8c0bb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.1 - Bronze Layer (część 3: zapis do Delta table)\n",
@@ -479,7 +527,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a1489eec-edc1-4cd0-88a2-7d1baff81de4",
      "showTitle": false,
@@ -508,7 +559,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a2baf140-5390-469b-9604-301840271fff",
      "showTitle": false,
@@ -527,7 +581,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "35a4cccb-7941-45d4-8ed7-fd78138541cc",
      "showTitle": false,
@@ -566,8 +623,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ab954005-5e0e-4949-bcd2-7dceafe0878c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.2 - Silver Layer (część 2: walidacja biznesowa i standaryzacja)\n",
@@ -616,8 +685,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "70ee1bff-0f89-44e9-ae8f-034f17cfee9d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.2 - Silver Layer (część 3: Silver metadata i zapis)\n",
@@ -661,7 +742,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "76fb36bc-5d0a-4db0-b028-b3cb02034c27",
      "showTitle": false,
@@ -687,7 +771,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "658e60bc-a70b-4106-aa44-8b27e9689091",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -902,7 +998,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2c576e84-79c6-4c93-bf0d-88c90f91605c",
      "showTitle": false,
@@ -918,8 +1017,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b5f63499-f789-4247-bc78-dd54e728f144",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.3 - Gold Layer (część 1: Wczytanie danych z Silver + data quality check)\n",
@@ -979,8 +1090,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7d6b6092-77bb-4e83-8340-a6530a9d4b5a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.3 - Gold Layer (część 2: Agregacja biznesowa + KPI calculation)\n",
@@ -1038,8 +1161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "567373b6-baa9-43c0-865d-981b51b13f0a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.3 - Gold Layer (część 3: Gold audit metadata + zapis do Delta)\n",
@@ -1106,7 +1241,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d958525c-9c99-4f91-bf6d-ff0c23db890e",
      "showTitle": false,
@@ -1128,7 +1266,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "09c7b6dc-8a35-48c8-8887-46d2ae7517cd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -1230,7 +1380,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b088f117-5b19-43eb-9a60-c8379ce7979e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -1303,15 +1465,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a55470bd-3d5d-4bba-b49d-2fe031793cbc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
-    "# Przykład 1.5 - Audit Trail Tracking\n",
-    "\n",
     "import uuid\n",
+    "from pyspark.sql import functions as F\n",
     "\n",
-    "# Generate unique batch ID\n",
     "batch_id = str(uuid.uuid4())\n",
     "\n",
     "print(\"=\" * 70)\n",
@@ -1319,8 +1491,10 @@
     "print(\"=\" * 70)\n",
     "print(f\"\\nBatch ID: {batch_id}\")\n",
     "\n",
-    "# Bronze: Track source\n",
-    "bronze_lineage = spark.table(bronze_table).select(\n",
+    "bronze_df = spark.table(bronze_table)\n",
+    "silver_df = spark.table(silver_table)\n",
+    "\n",
+    "bronze_lineage = bronze_df.select(\n",
     "    \"_bronze_ingest_timestamp\",\n",
     "    \"_bronze_source_file\",\n",
     "    \"_bronze_ingested_by\",\n",
@@ -1330,8 +1504,7 @@
     "print(\"\\n[BRONZE LAYER - Source Tracking]\")\n",
     "display(bronze_lineage)\n",
     "\n",
-    "# Silver: Track transformation\n",
-    "silver_lineage = spark.table(silver_table).select(\n",
+    "silver_lineage = silver_df.select(\n",
     "    \"_silver_processed_timestamp\",\n",
     "    \"_data_quality_flag\"\n",
     ").distinct()\n",
@@ -1339,19 +1512,19 @@
     "print(\"\\n[SILVER LAYER - Transformation Tracking]\")\n",
     "display(silver_lineage)\n",
     "\n",
-    "# Lineage query: Które Bronze files stworzyły które Silver records?\n",
+    "# Use aliases to disambiguate columns after join\n",
     "bronze_to_silver_lineage = (\n",
-    "    spark.table(silver_table)\n",
+    "    silver_df.alias(\"s\")\n",
     "    .join(\n",
-    "        spark.table(bronze_table),\n",
+    "        bronze_df.alias(\"b\"),\n",
     "        [\"order_id\"],\n",
     "        \"inner\"\n",
     "    )\n",
     "    .select(\n",
-    "        F.col(\"order_id\"),\n",
-    "        F.col(\"_bronze_source_file\").alias(\"source_file\"),\n",
-    "        F.col(\"_bronze_ingest_timestamp\").alias(\"bronze_loaded_at\"),\n",
-    "        F.col(\"_silver_processed_timestamp\").alias(\"silver_processed_at\")\n",
+    "        F.col(\"s.order_id\"),\n",
+    "        F.col(\"b._bronze_source_file\").alias(\"source_file\"),\n",
+    "        F.col(\"b._bronze_ingest_timestamp\").alias(\"bronze_loaded_at\"),\n",
+    "        F.col(\"s._silver_processed_timestamp\").alias(\"silver_processed_at\")\n",
     "    )\n",
     "    .distinct()\n",
     ")\n",
@@ -1359,7 +1532,6 @@
     "print(\"\\n[LINEAGE - Bronze → Silver Tracking]\")\n",
     "display(bronze_to_silver_lineage.limit(10))\n",
     "\n",
-    "# Calculate processing lag\n",
     "processing_lag = (\n",
     "    bronze_to_silver_lineage\n",
     "    .withColumn(\n",
@@ -1380,7 +1552,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5cdff76a-5207-406e-8143-390d787b3c20",
      "showTitle": false,
@@ -1405,7 +1580,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "00394cdb-94e1-4a27-ba78-13b6e645a8ea",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -1643,7 +1830,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e5467410-81ef-454e-85dd-7a4a0124f6c8",
      "showTitle": false,
@@ -1662,7 +1852,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "dd361f35-381a-4bc1-a9f2-afbbe5145050",
      "showTitle": false,
@@ -1775,7 +1968,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "24775669-45c9-488f-b469-a191bc8dc0ee",
      "showTitle": false,
@@ -1796,7 +1992,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7612f331-bde2-4bdd-9e25-6c92fee1205b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -1809,8 +2017,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1e67a042-bc15-4f5c-b69a-c1e66727c510",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 2.2 - Gold Incremental Refresh (MERGE INTO)\n",
@@ -1891,7 +2111,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "403e0fa5-a62c-4d6c-87d9-50c715543d96",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Wyjaśnienie:**\n",
     "\n",
@@ -1923,7 +2155,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "412caac0-e7bf-4337-8060-dbaad7a6810f",
      "showTitle": false,
@@ -2157,7 +2392,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ed299e03-b38d-4e07-bfea-9693a406dd6b",
      "showTitle": false,
@@ -2176,7 +2414,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "af3de11d-a1d2-4f0b-b425-f1a50ec9c063",
      "showTitle": false,
@@ -2218,7 +2459,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "08f316d1-6f5f-44d5-b872-b68d6c12dde9",
      "showTitle": false,
@@ -2241,7 +2485,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f8bcafb4-68ad-4411-96ac-9bd78d08760d",
      "showTitle": false,
@@ -2362,7 +2609,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "eb006e4f-619f-46ac-b83f-b8b7530398d9",
      "showTitle": false,
@@ -2529,7 +2779,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "11249d20-d238-4d58-a93f-8811a5089d1b",
      "showTitle": false,
@@ -2575,7 +2828,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2fbc8fff-4a63-438d-91db-6270c0dbe262",
      "showTitle": false,
@@ -2596,7 +2852,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e282e534-095c-48b6-ba80-eefa389da3f1",
      "showTitle": false,
