--- a/DZIEN_3_Transformation_Governance_Integrations/01_advanced_pyspark_transformations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/01_advanced_pyspark_transformations.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "718d00c5",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8a06bc2b-cb97-47f5-8faa-8ddbf5f6c03e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Demo 1: Zaawansowane Transformacje PySpark\n",
     "\n",
@@ -27,17 +38,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea713080",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "94999862-7783-46b4-86d8-085065577b38",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Inicjalizacja środowiska"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1ba7febe",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d841b081-2fdd-4403-be0d-ccd6f4aa4ebd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%run ../00_setup"
@@ -45,8 +78,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b813e4a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "281f35ce-67c2-4c5d-813a-df77510d4ab4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -70,9 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "260822ea",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "57b5eb89-61be-4a9d-844f-e9a70b46f915",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import Window\n",
@@ -115,8 +170,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5f44541",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "620cad89-c881-45a0-8f1a-755cd13a619d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1: Ranking - row_number, rank, dense_rank\n",
     "\n",
@@ -128,9 +194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41c829d5",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d47cb523-b670-491e-b017-8e7d6130c3b5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Ranking zamówień dla każdego klienta według kwoty (malejąco)\n",
@@ -145,8 +222,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90393637",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7696df70-36cc-444d-93b3-7594a08d0f6d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 2: Funkcje lag i lead\n",
     "\n",
@@ -161,9 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f85b5af",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3821ab92-a09d-4f0a-a3cb-a9bfc7784f96",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Porównanie z poprzednim i następnym zamówieniem\n",
@@ -181,8 +280,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9036a7",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d3461c96-a034-480b-88fe-1685d3782805",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -201,9 +311,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6cce1849",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bdb42c3d-1067-4410-87a9-df2cc141393e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Rolling sum - suma krocząca (wszystkie poprzednie + bieżący)\n",
@@ -221,9 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d55a6f1",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "60580cdd-ebfd-4a4e-8fd4-ee619a699009",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Moving average - średnia krocząca z 3 ostatnich zamówień\n",
@@ -242,8 +374,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc0b89d9",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b2958941-0501-4d14-ab3a-8cc7cf69cd56",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -262,9 +405,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "820bd764",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "43664c67-d66c-4cb1-aec7-22fa0354cf5a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Produkty w zamówieniach (array)\n",
@@ -290,9 +444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "629f13e1",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "cebc088d-335c-413e-9167-7bf9bc431636",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# explode() - rozwija tablicę do osobnych wierszy\n",
@@ -309,9 +474,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5ea3c25a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "927c9f06-10be-4c49-ae8b-693884165c6f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# posexplode() - rozwija tablicę z numerem pozycji\n",
@@ -328,8 +504,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc3c775f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5da29647-e3a8-435b-b04c-a59ea2494797",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Praktyczny przykład: Analiza koszyka zakupowego\n",
     "\n",
@@ -342,9 +529,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "add37719",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6d13757a-6330-444e-baaf-fef7d61bcf72",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Dane: Zamówienia z produktami, cenami i kategoriami\n",
@@ -400,9 +598,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "427b334a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "81d7be52-15e3-45fa-88ae-e9813c8f1af7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Krok 1: explode() - rozwój zagnieżdżonych produktów\n",
@@ -433,9 +642,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c7a60ad",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f44cc2a0-e790-4414-8c75-1ab8f9bc9092",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Analiza 1: Top 5 najpopularniejszych produktów\n",
@@ -468,11 +688,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8276ffda",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "92b7b571-3c57-472b-8691-3498553a37ed",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
+    "from pyspark.sql.functions import when\n",
+    "\n",
     "# Analiza 3: Metryki koszyka zakupowego per zamówienie\n",
     "print(\"🛒 Metryki koszyka zakupowego:\")\n",
     "basket_metrics = basket_exploded \\\n",
@@ -506,9 +739,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15dfbdbf",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1f218c7a-18cf-490d-a0c5-f624772cad7f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Analiza 4: Market Basket Analysis - produkty kupowane razem\n",
@@ -555,8 +799,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9033254",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9408a8bc-e19f-4aab-95f3-9a3a4d427a74",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 💡 Kluczowe wnioski z przykładu\n",
     "\n",
@@ -580,8 +835,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bf6393",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "abb25aa2-c7a6-4750-9aa6-03242bf7a92e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### sequence() - generowanie sekwencji\n",
     "\n",
@@ -595,9 +861,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46f20298",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8f928c78-a503-4f05-8566-85a05c5b18f3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Generowanie sekwencji dni między datami\n",
@@ -632,8 +909,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ede36a7d",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "775e5750-b635-41a3-8aad-a89e67c55f8f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -653,9 +941,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "45cacbae",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b5e5606a-e350-4ee5-a13c-dd49ae03fe2d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Parsowanie JSON payload\n",
@@ -673,9 +972,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c3e333d",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3f858685-caa7-4102-a435-6e4c7c36c38c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Automatyczne wykrycie schematu JSON\n",
@@ -691,9 +1001,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e49453d",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "74975a53-7ac4-4f95-bafe-d28b2bcb792e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Wyciąganie pól z zagnieżdżonego JSON\n",
@@ -711,8 +1032,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5a956f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3b650360-2731-4063-822b-3ad522f4d5fb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -736,9 +1068,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bb239309",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a84a4dc3-e68f-43c7-9976-05c757002bc9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import datediff, months_between, year, month, dayofweek, quarter\n",
@@ -758,9 +1101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "13da278a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f95cf7c1-fdfc-4b35-9779-e095f31943bb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Obliczanie okresów między zamówieniami\n",
@@ -778,8 +1132,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2eda50d",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b546d8a8-68f6-45f8-90fb-35f134551889",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -796,9 +1161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2e66cdee",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "779abf9e-66a4-4d53-9ae3-2c8ef54130ac",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Kompleksowa analiza zachowań klientów\n",
@@ -823,8 +1199,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a63a84",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e9bbd12b-7c8d-4e88-aa5d-c57dcf0d5baa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -871,10 +1258,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "01_advanced_pyspark_transformations",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
