--- a/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1b8a314b-58a6-4d37-b92c-772039a6c6a5",
      "showTitle": false,
@@ -31,7 +34,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d92e4e24-a75b-495e-9f13-63add1e0d834",
      "showTitle": false,
@@ -55,7 +61,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1f0a0485-0e9d-4fbc-b4a4-2188c110a705",
      "showTitle": false,
@@ -83,7 +92,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5625466e-48b2-40d4-90d4-f64ec704109b",
      "showTitle": false,
@@ -122,7 +134,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f251543a-7c90-47e3-9cbf-643b5581b5d1",
      "showTitle": false,
@@ -188,7 +203,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "14da3d4a-ecab-4c74-81d6-3bd560de98ba",
      "showTitle": false,
@@ -221,7 +239,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "fdcbfbe5-acbb-4d95-93a3-51ff36ed4099",
      "showTitle": false,
@@ -1432,7 +1453,6 @@
     "\n",
     "# Utwórz DataFrame z nowymi kolumnami\n",
     "extended_customers = spark.createDataFrame([\n",
-    "extended_customers = spark.createDataFrame([\n",
     "    (\"CUST_9999\", \"Ewa\", \"Wiśniewska\", \"ewa.wisn@example.com\", \"+48 600 123 456\",\n",
     "     \"Warsaw\", \"mazowieckie\", \"Poland\", \"2025-01-25\", \"Premium\", \"Premium\", \"PL\")\n",
     "], [\"customer_id\", \"first_name\", \"last_name\", \"email\", \"phone\", \"city\", \"state\", \n",
@@ -1495,8 +1515,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dbb4271e-b813-4e96-b2c5-a4de292854e3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# KROK 2: Utwórz DataFrame z nowymi kolumnami (loyalty_tier, preferred_language)\n",
@@ -1519,8 +1551,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4cebf536-323e-47ac-9683-b0bc9568199e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# KROK 3: Zapis bez mergeSchema - spowoduje błąd!\n",
@@ -1544,8 +1588,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5146fe75-96de-4977-b284-908a3c370baa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# KROK 4: Zapis z mergeSchema - automatyczne dodanie kolumn\n",
@@ -1566,8 +1622,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2e569439-0a4f-4977-8654-142f3323d7da",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# KROK 5: Sprawdź nowy schemat po schema evolution\n",
@@ -1583,8 +1651,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7321b53c-0133-4fd6-a42f-041eb1ac2613",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# KROK 6: Weryfikacja - nowy rekord z dodatkowymi kolumnami\n",
